# datastructure-algorithm

CLlinkedlist/src/: CLlinkedlist  CLlinkedlist.c  CLlinkedlist.h  CLlinkedlist.out  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.c
linkedlist/src/: Makefile  linkedlist.c  linkedlist.h  linkedlist.out  main.c
